--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-    color: aliceblue;
-    background: #212529;
+    color: #001728;
+    background: #F8F9FA;
     margin: 0px auto;
     padding-top: 10px;
     bottom: 0;
