--- a/src/Stylesheets/AppInfo.css
+++ b/src/Stylesheets/AppInfo.css
@@ -1,6 +1,20 @@
 /* Default Version */
-.bgColor {
+/* .bgColor {
     background-color: #F2F4F8;
+}
+
+.fgColor {
+    background-color: white;
+    border-radius: 10px;
+}
+
+.textColor {
+    color: rgb(0, 0, 0);
+} */
+
+/* Alternate Version */
+.bgColor {
+    background-color: #FFF5EA;
 }
 
 .fgColor {
